# ros_warehouse_robot

./: LICENSE  README.md
devel/: local_setup.sh  setup.sh
devel/lib/pkgconfig/: ros_warehouse_robot.pc
devel/share/ros_warehouse_robot/cmake/: ros_warehouse_robotConfig.cmake
src/: CMakeLists.txt  package.xml
src/config/: amcl_params.yaml  base_local_planner_params.yaml  costmap_common_params.yaml  front_cam_config.yaml  global_params.yaml  lane_config.yaml  local_costmap_params.yaml  move_base.yaml  zone_positions.yaml
src/launch/: main_controller.launch  mapping_checker.launch  navigation.launch  warehouse_simulation.launch
src/maps/: warehouse_map.pgm  warehouse_map.yaml
src/models/package_box/: model.config  model.sdf
src/models/shelf/: model.config  model.sdf
src/scripts/: front_camera_processor.py  location_checker.py  main_controller.py  manipulation_manager.py  monitor_gui.py  navigation_manager.py  navigation_manager_with_Astar.py  overhead_camera_processor.py  package_detector.py  sensor_fusion.py
src/scripts/test/: CostmapAnalyzer.py  MoveBaseStressTest.py  NavigationDiagnostics.py
src/urdf/: warehouse_robot_with_arm.gazebo  warehouse_robot_with_arm.urdf
src/worlds/: warehouse.world
